Fixing weird layout issue on tech pages
derp derp derp :8ball:

--- a/css/new.less
+++ b/css/new.less
@@ -699,6 +699,7 @@ li.home.login a {
 #techzz {
     margin-left: 0px;
     padding-left: 2%;
+    padding: 0px;
 }
 .labelz {
   margin-left: 9%;
